src/test/ui/error-codes/E0199.stderr
error[E0199]: implementing the trait `Bar` is not unsafe
  --> $DIR/E0199.rs:16:1
   |
16 | unsafe impl Bar for Foo { } //~ ERROR implementing the trait `Bar` is not unsafe [E0199]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0199"
